# kafe2

./: .coveragerc  .flake8  .flake8rc  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  Makefile  README.rst  TEST.py  dev_dependencies.txt  kafe2_example_johannes.py  profile_nonlinearity_test.py  profile_verification.py  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting.yml  pytest.yml  pythonpublish.yml  pythonpublish_manual.yml
case_studies/: README.rst  determinant_cost.py  extremely_nonlinear_fit.py  qr_vs_cholesky_speed.py  qr_vs_cholesky_speed_run.py
case_studies/007_relative_errors/: relative_errors.py
case_studies/104_ensemble/: ensemble_test.py
doc/: .gitignore  Makefile
doc/src/: Makefile  conf.py  index.rst  requirements.txt
docs/: README.md  index.html
examples/: README.rst  jupyter_tutorial_de.ipynb  jupyter_tutorial_en.ipynb
examples/001_line_fit/: README.rst  line_fit.py  line_fit.yml
examples/001_linear_regression/: linear_regression.py
examples/002_model_functions/: README.rst  data.yml  exponential_fit.yml  generate_data.py  line_fit.yml  linear_fit.yml  model_functions.py
examples/003_constraints/: constraints.py  constraints.yml  data.yml  generate_data.py
examples/003_profiling/: 00_object_oriented_programming.py  01_non_linear_fit.py  01_non_linear_fit.yml  02_double_slit.py  02_double_slit.yml  02_double_slit_data.yml  03_x_errors.py  04_one_sided_limit.py  README.rst  generate_data_x_errors.py
examples/004_constraints/: README.rst  constraints.py  constraints.yml  generate_data.py
examples/004_cost_functions/: 01_poisson_cost_function.py  02_gaussian_approximation_good.py  03_gaussian_approximation_bad.py  generate_data_radiocarbon_dating.py  measured_c14_activity.txt
examples/004_non_linear_fit/: data.yml  generate_data_x_errors.py  non_linear_fit.py  non_linear_fit.yml  x_errors.py  x_errors.yml
examples/005_convenience/: .gitignore  README.rst  customize.py  fit_results.yml  properties.py  to_file.py
examples/005_histogram_fit/: histogram.yml  histogram_fit.py
examples/005_x-errors/: 01_nonlinear_fit.py  extremely_nonlinear_fit.py  generate_data_nonlinear_fit.py  nonlinear_fit.py
examples/006_advanced_errors/: 01_covariance_matrix.py  01_covariance_matrix.yml  02_error_components.py  03_relative_data_uncertainties.yml  03_relative_uncertainties.py  04_shockley.py  05_xyFit.yml  README.rst
examples/006_unbinned_fit/: unbinned.py  unbinned.yml
examples/007_cost_functions/: 01_poisson_cost_function.py  02_gaussian_approximation_good.py  03_gaussian_approximation_bad.py  README.rst
examples/007_relative_uncertainties/: relative_model_uncertainties.yml  relative_uncertainties.py
examples/008_indexed_fit/: 01_Parameter_andIntervalTransformation.py  02_object_oriented.py  README.rst
examples/008_relative_errors/: relative_errors.py
examples/009_histogram_fit/: 01_histogram_fit.py  02_absolute.py  03_SplusBfit.py  README.rst  histogram.yml  histogram_fit.py  histogram_fit_absolute.py
examples/010_unbinned_fit/: 01_unbinned.py  02_unbinned_hist_comparison.py  README.rst
examples/011_multifit/: 01_fit_with_parameter_constraints.py  02_multifit.py  03_multifit2.py  04_multifit3.py  README.rst
examples/012_custom_fit/: 01_manual_chi2.py  README.rst
examples/101_complicated_errors/: weighted_mean.py
examples/102_multifit/: fit_with_parameter_constraints.py  multifit.py  multifit_alt.py  shared_error_vs_separate.py
examples/103_profiling/: double_slit.py
examples/104_ensemble/: ensemble_test.py
examples/201_kafe2go/: line_fit.yml  multifit.yml  weighted_mean.yml
examples/201_kafe2go_advanced/: multifit.yml
examples/202_cost_functions/: 01_poisson_cost_function.py  02_gaussian_approximation_good.py  03_gaussian_approximation_bad.py  measured_c14_activity.txt  measured_c14_activity_sparse.txt
examples/double_slit/: double_slit.py  double_slit.yml
examples/ensemble_test/: ensemble_test.py
examples/kafe2go/: double_slit.yml  line_fit.yml  multifit.yml  weighted_mean.yml
examples/line_fit/: line_fit.py
examples/multifit/: fit_with_parameter_constraints.py  multifit.py
examples/two_models/: two_models.py  two_models.yml
examples/weighted_mean/: weighted_mean.py
examples/x-errors/: extremely_nonlinear_fit.py  nonlinear_fit.py
kafe/: __init__.py  error.py  parameter_space.py  tools.py
kafe/config/: __init__.py  kafe.matplotlibrc.conf  kafe.yaml  plot_style_color.yaml
kafe/core/: __init__.py  confidence.py  contour.py  error.py
kafe/fit/: __init__.py
kafe/tests/: test_cov_mat.py  test_gaussian_error.py  test_parameter_space.py
kafe/util/: __init__.py  function_library.py
kafe2/: __init__.py  _version_info.py  tools.py
kafe2/config/: __init__.py  kafe2.matplotlibrc.conf  kafe2.yaml  plot_style_color.yaml
kafe2/core/: __init__.py  confidence.py  constraint.py  contour.py  error.py
kafe2/fit/: __init__.py  _aux.py
kafe2/test/: tools.py
kafe_tests/: test_cov_mat.py  test_gaussian_error.py
kafe_tests/core/: test_cov_mat.py  test_fit.py  test_gaussian_error.py  test_iminuit_minimizer.py  test_nexus.py  test_root_tminuit_minimizer.py  (+1 more)
(+278 files in other folders)
